<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="175dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="@color/teal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInButton" />

    <Button
        android:id="@+id/makeReservationButton"
        android:layout_width="175dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:text="@string/make_reservation"
        android:textAlignment="center"
        android:textColor="@color/teal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountButton" />

    <Button
        android:id="@+id/cancelReservationButton"
        android:layout_width="175dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:text="@string/cancel_reservation"
        android:textAlignment="center"
        android:textColor="@color/teal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makeReservationButton" />

    <Button
        android:id="@+id/manageButton"
        android:layout_width="175dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:text="@string/manage"
        android:textAlignment="center"
        android:textColor="@color/teal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancelReservationButton" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="175dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textColor="@color/teal"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle" />

    <ImageView
        android:id="@+id/mainTitle"
        android:layout_width="270dp"
        android:layout_height="129dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_title" />
</android.support.constraint.ConstraintLayout>